======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.02-r2

## New Tools

## New Features

## Fixes
- Several fixes related to changes in file system handling in DF 52.01
- `dig-now`: don't allow UNDIGGABLE stones to be excavated

## Misc Improvements
- `autoclothing`: added a ``clear`` option to unset previously set orders

## Documentation

## API
- Added GUI focus strings for new_arena: ``/Loading`` and ``/Mods``
- ``Filesystem::getBaseDir`` and ``Filesystem::getInstallDir`` added (and made available in Lua)
- Expanded the partial implementations of ``Military::addToSquad`` and ``Military::removeFromSquad``

## Lua
- Inserting values into STL containers containing nonprimitive types is now supported

## Removed

# 52.02-r1

## New Tools

## New Features

## Fixes
- Honor the "portable mode" preference setting for locating save folders. Fixes DFHack cosaves not working in most cases.

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.01-r1

## New Tools

## New Features
- `tweak`: ``animaltrap-reuse``: make it so built animal traps automatically unload the vermin they catch into stockpiled animal traps, so that they can be automatically re-baited and reused

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 51.13-r1

## New Features

- Compatibility with DF 51.13

# 51.12-r1.1

## New Features

- Compatibility with Itch release of DF 51.12

# 51.12-r1

## Fixes
- `getplants`: will no longer crash when faced with plants with growths that do not drop seeds when processed